--- a/data/projects.json
+++ b/data/projects.json
@@ -1,7 +1,12 @@
 [
     {
         "title": "retro-portfolio",
-        "description": "No description provided.",
+        "description": {
+            "en": "No description provided.",
+            "fr": "Aucune description fournie.",
+            "mx": "No se proporcionó descripción.",
+            "ht": "Pa gen deskripsyon."
+        },
         "url": "https://github.com/mtldev514/retro-portfolio",
         "visibility": "public",
         "date": "2026-02-10",
@@ -9,7 +14,12 @@
     },
     {
         "title": "openclaw",
-        "description": "Your own personal AI assistant. Any OS. Any Platform. The lobster way. \ud83e\udd9e ",
+        "description": {
+            "en": "Your own personal AI assistant. Any OS. Any Platform. The lobster way. 🦞 ",
+            "fr": "Votre assistant IA personnel. Tout OS. Toute plateforme. À la manière du homard. 🦞 ",
+            "mx": "Tu asistente personal de IA. Cualquier SO. Cualquier plataforma. A lo langosta. 🦞 ",
+            "ht": "Asistan IA pèsonèl ou. Nenpòt OS. Nenpòt Platfòm. Fason oma a. 🦞 "
+        },
         "url": "https://github.com/mtldev514/openclaw",
         "visibility": "public",
         "date": "2026-02-04",
@@ -17,7 +27,12 @@
     },
     {
         "title": "carabiner",
-        "description": "No description provided.",
+        "description": {
+            "en": "No description provided.",
+            "fr": "Aucune description fournie.",
+            "mx": "No se proporcionó descripción.",
+            "ht": "Pa gen deskripsyon."
+        },
         "url": "https://github.com/mtldev514/carabiner",
         "visibility": "public",
         "date": "2025-08-29",
