--- a/data/projects.json
+++ b/data/projects.json
@@ -73,7 +73,7 @@
             "ht": "Yon zouti entelijan pou enpòte RAW nan workflow foto. Li not ak label XMP, li kopye sèlman bon fichye yo, li verifye entegrite, epi li kenbe istwa pou evite doublon."
         },
         "url": "https://github.com/mtldev514/import-photos",
-        "visibility": "private",
+        "visibility": "public",
         "date": "2026-02-11",
         "category": "projects"
     }
