--- a/data/projects.json
+++ b/data/projects.json
@@ -47,6 +47,7 @@
             "ht": "Kalandriye pou kominote a. Fèt ak Next.js ak Supabase. Li konekte dirèk ak baz done a. Fèt pou rasanble moun."
         },
         "url": "https://github.com/mtldev514/carabiner",
+        "website": "https://carabiner.gay/fr",
         "visibility": "public",
         "date": "2025-08-29",
         "category": "projects"
