--- a/lang.example/en.json.example
+++ b/lang.example/en.json.example
@@ -6,20 +6,20 @@
     "nav_photo": "Photo",
     "nav_sculpting": "Volume",
     "nav_projects": "Code",
-    "header_title": "alex a montreal",
+    "header_title": "Your Portfolio",
     "header_subtitle": "Code by day, Art by night. Trying to make sense of it all.",
-    "marquee": "*** I have suffered often, I have sometimes been mistaken, but I have loved. It is I who have lived, and not a fictitious being created by my pride and my boredom. ***",
+    "marquee": "*** Welcome to my retro portfolio - A nostalgic journey through creativity and code. ***",
     "sidebar_about_title": "Who?",
-    "sidebar_about_text": "I'm Alex. DevOps by trade, artist by necessity. Based in Montreal. I look for the balance between system logic and creative chaos.",
+    "sidebar_about_text": "Your bio here. Artist, developer, creator. Tell your story.",
     "sidebar_links_title": "Connect",
     "sidebar_github": "My GitHub",
     "sidebar_linkedin": "My LinkedIn",
     "sidebar_status_title": "Status",
     "sidebar_status_available": "Open to interesting projects.",
     "sidebar_construction": "Still a work in progress (like everything else).",
-    "sidebar_radio_title": "Radio Alex",
+    "sidebar_radio_title": "Your Radio",
     "sidebar_radio_playing": "Now Playing:",
-    "footer_copy": "© 2026 alex a montreal",
+    "footer_copy": "© 2026 Your Name",
     "footer_browser": "Guaranteed heavy-framework free. Best viewed with coffee.",
     "footer_visitors": "Visits:",
     "footer_last_updated": "Last update:",
@@ -43,7 +43,7 @@
     "photo_nature": "Humans & Concrete",
     "photo_portraits": "Portraits",
     "street_title": "The Street Life",
-    "street_subtitle": "Montreal, raw and beautiful",
+    "street_subtitle": "City life, raw and beautiful",
     "street_shadows": "Shadows & Lights",
     "gallery_painting_drawing": "Paint & Draw",
     "gallery_intro": "Screens are cold. Canvas and paper don't forgive. That's what I like. The boundary between what I see and what I feel.",
@@ -51,8 +51,8 @@
     "photo_collections": "Series",
     "photo_intro": "I chase the city's energy. Tired faces, alleyways, the light at 4 AM. The story that writes itself.",
     "street_candid": "Stolen Moments",
-    "street_intro": "Montreal is beautiful when it's dirty. Street photography is my way of documenting solitude and light in the ambient mess.",
-    "street_marquee": ">>> IN THE STREETS <<< THE INVISIBLE BECOMES VISIBLE <<< MONTREAL 2026 <<<",
+    "street_intro": "The city is beautiful in all its rawness. Street photography is my way of documenting solitude and light in the urban landscape.",
+    "street_marquee": ">>> IN THE STREETS <<< THE INVISIBLE BECOMES VISIBLE <<< URBAN LIFE 2026 <<<",
     "projects_title": "Code & Systems",
     "projects_subtitle": "The art of invisible architecture",
     "projects_intro": "Architecture is art too. When I put down the brushes, I go back to my roots: the terminal, the code, and systems that actually stand up.",
@@ -94,5 +94,21 @@
     "detail_lyrics": "Lyrics",
     "card_github": "GitHub",
     "card_website": "Website",
-    "music_play_me": "Play Me"
+    "music_play_me": "Play Me",
+    "admin_title": "PORTFOLIO MANAGER V1.0",
+    "admin_tab_add": "Add Media",
+    "admin_tab_manage": "Manage Content",
+    "admin_tab_bulk": "Bulk Edit",
+    "admin_tab_translations": "Translations",
+    "admin_tab_config": "Configuration",
+    "admin_drop_title": "DROP FILES HERE",
+    "admin_drop_subtitle": "or click to browse — images + audio supported",
+    "admin_upload_button": "Upload",
+    "admin_loading": "Loading...",
+    "admin_fetching": "Fetching from GitHub...",
+    "admin_kernel_ready": "[OS-KERNEL] Ready...",
+    "admin_logged_as": "Logged in as",
+    "admin_user": "ADMIN",
+    "admin_system": "System: AI-Enhanced",
+    "edit_title": "CONTROL-PANEL V1.0"
 }
