--- a/lang.example/fr.json.example
+++ b/lang.example/fr.json.example
@@ -6,20 +6,20 @@
     "nav_photo": "Photo",
     "nav_sculpting": "Volume",
     "nav_projects": "Code",
-    "header_title": "alex a montreal",
+    "header_title": "Votre Portfolio",
     "header_subtitle": "Code le jour, Art la nuit. Essayer de faire du sens avec tout ça.",
-    "marquee": "*** J'ai souffert souvent, je me suis trompé quelquefois, mais j'ai aimé. C'est moi qui ai vécu, et non pas un être factice créé par mon orgueil et mon ennui. ***",
+    "marquee": "*** Bienvenue sur mon portfolio rétro - Un voyage nostalgique à travers la créativité et le code. ***",
     "sidebar_about_title": "C'est qui ?",
-    "sidebar_about_text": "Moi c'est Alex. DevOps de carrière, artiste par nécessité. J'habite Montréal. Je cherche l'équilibre entre la logique des systèmes et le chaos de la création.",
+    "sidebar_about_text": "Votre bio ici. Artiste, développeur, créateur. Racontez votre histoire.",
     "sidebar_links_title": "Mes réseaux",
     "sidebar_github": "Mon GitHub",
     "sidebar_linkedin": "Mon LinkedIn",
     "sidebar_status_title": "Statut",
     "sidebar_status_available": "Ouvert aux projets intéressants.",
     "sidebar_construction": "Toujours en chantier (comme le reste).",
-    "sidebar_radio_title": "Radio Alex",
+    "sidebar_radio_title": "Votre Radio",
     "sidebar_radio_playing": "En ce moment :",
-    "footer_copy": "© 2026 alex a montreal",
+    "footer_copy": "© 2026 Votre Nom",
     "footer_browser": "Garanti sans frameworks lourds. Marche mieux avec un café.",
     "footer_visitors": "Passages :",
     "footer_last_updated": "Dernière update :",
@@ -94,5 +94,21 @@
     "detail_lyrics": "Paroles",
     "card_github": "GitHub",
     "card_website": "Site web",
-    "music_play_me": "Écouter"
+    "music_play_me": "Écouter",
+    "admin_title": "GESTIONNAIRE DE PORTFOLIO V1.0",
+    "admin_tab_add": "Ajouter Média",
+    "admin_tab_manage": "Gérer Contenu",
+    "admin_tab_bulk": "Édition Groupée",
+    "admin_tab_translations": "Traductions",
+    "admin_tab_config": "Configuration",
+    "admin_drop_title": "DÉPOSER FICHIERS ICI",
+    "admin_drop_subtitle": "ou cliquez pour parcourir — images + audio supportés",
+    "admin_upload_button": "Téléverser",
+    "admin_loading": "Chargement...",
+    "admin_fetching": "Récupération depuis GitHub...",
+    "admin_kernel_ready": "[OS-KERNEL] Prêt...",
+    "admin_logged_as": "Connecté en tant que",
+    "admin_user": "ADMIN",
+    "admin_system": "Système: Amélioré IA",
+    "edit_title": "PANNEAU-CONTRÔLE V1.0"
 }
