--- a/lang.example/en.json.example
+++ b/lang.example/en.json.example
@@ -7,108 +7,108 @@
     "nav_sculpting": "Volume",
     "nav_projects": "Code",
     "header_title": "Your Portfolio",
-    "header_subtitle": "Code by day, Art by night. Trying to make sense of it all.",
-    "marquee": "*** Welcome to my retro portfolio - A nostalgic journey through creativity and code. ***",
-    "sidebar_about_title": "Who?",
-    "sidebar_about_text": "Your bio here. Artist, developer, creator. Tell your story.",
+    "header_subtitle": "Your creative subtitle here.",
+    "marquee": "*** Welcome to my portfolio - Customize this scrolling text in lang/en.json ***",
+    "sidebar_about_title": "About",
+    "sidebar_about_text": "Write a short bio about yourself here.",
     "sidebar_links_title": "Connect",
-    "sidebar_github": "My GitHub",
-    "sidebar_linkedin": "My LinkedIn",
+    "sidebar_github": "GitHub",
+    "sidebar_linkedin": "LinkedIn",
     "sidebar_status_title": "Status",
-    "sidebar_status_available": "Open to interesting projects.",
-    "sidebar_construction": "Still a work in progress (like everything else).",
-    "sidebar_radio_title": "Your Radio",
+    "sidebar_status_available": "Open to projects",
+    "sidebar_construction": "Work in progress",
+    "sidebar_radio_title": "Radio",
     "sidebar_radio_playing": "Now Playing:",
     "footer_copy": "© 2026 Your Name",
-    "footer_browser": "Guaranteed heavy-framework free. Best viewed with coffee.",
+    "footer_browser": "Best viewed with...",
     "footer_visitors": "Visits:",
     "footer_last_updated": "Last update:",
     "gallery_created_on": "Created:",
     "gallery_added_on": "Added:",
     "filter_empty": "Nothing here yet.",
-    "index_welcome": "Hi.",
-    "index_intro": "I've spent my life building invisible infrastructures. Here, it's the opposite. It's visible, it's imperfect, it's me. Oil, charcoal, and photos taken while the city sleeps.",
-    "index_featured": "Right now: \"Morning Dreams\" (Oil on Canvas)",
-    "index_look_around": "Look around. No specific order, just fragments of what I see.",
-    "index_highlights_title": "Selection:",
-    "index_highlight_street": "The Street Life - Urban chaos, unfiltered.",
-    "index_highlight_pastel": "Pastel Series - When I need softness.",
-    "index_highlight_charcoal": "Charcoal Portraits - Seeking the soul, not just the face.",
-    "gallery_title": "The Workshop",
-    "gallery_subtitle": "Oil, Watercolor, Charcoal. Back to basics.",
+    "index_welcome": "Hello.",
+    "index_intro": "Introduction text about your work.",
+    "index_featured": "Featured Work:",
+    "index_look_around": "Look around.",
+    "index_highlights_title": "Highlights:",
+    "index_highlight_street": "Highlight 1",
+    "index_highlight_pastel": "Highlight 2",
+    "index_highlight_charcoal": "Highlight 3",
+    "gallery_title": "Gallery",
+    "gallery_subtitle": "Subtitle",
     "gallery_painting": "Painting",
     "gallery_drawing": "Drawing",
     "photo_title": "Photography",
-    "photo_subtitle": "Stopping time for a second",
-    "photo_nature": "Humans & Concrete",
-    "photo_portraits": "Portraits",
-    "street_title": "The Street Life",
-    "street_subtitle": "City life, raw and beautiful",
-    "street_shadows": "Shadows & Lights",
-    "gallery_painting_drawing": "Paint & Draw",
-    "gallery_intro": "Screens are cold. Canvas and paper don't forgive. That's what I like. The boundary between what I see and what I feel.",
+    "photo_subtitle": "Subtitle",
+    "photo_nature": "Collection 1",
+    "photo_portraits": "Collection 2",
+    "street_title": "Street Photography",
+    "street_subtitle": "Subtitle",
+    "street_shadows": "Collection 1",
+    "gallery_painting_drawing": "Artworks",
+    "gallery_intro": "Intro text for gallery.",
     "gallery_back": "Back",
     "photo_collections": "Series",
-    "photo_intro": "I chase the city's energy. Tired faces, alleyways, the light at 4 AM. The story that writes itself.",
-    "street_candid": "Stolen Moments",
-    "street_intro": "The city is beautiful in all its rawness. Street photography is my way of documenting solitude and light in the urban landscape.",
-    "street_marquee": ">>> IN THE STREETS <<< THE INVISIBLE BECOMES VISIBLE <<< URBAN LIFE 2026 <<<",
-    "projects_title": "Code & Systems",
-    "projects_subtitle": "The art of invisible architecture",
-    "projects_intro": "Architecture is art too. When I put down the brushes, I go back to my roots: the terminal, the code, and systems that actually stand up.",
+    "photo_intro": "Intro text for photography.",
+    "street_candid": "Candid",
+    "street_intro": "Intro text for street photography.",
+    "street_marquee": ">>> SCROLLING TEXT <<<",
+    "projects_title": "Projects",
+    "projects_subtitle": "Subtitle",
+    "projects_intro": "Intro text for projects.",
     "projects_view_code": "View Source",
-    "sidebar_radio_select": "Soundtrack:",
-    "sidebar_video_title": "Retro TV",
-    "sidebar_video_note": "Click to play/pause",
-    "sculpting_title": "Volume",
-    "sculpting_subtitle": "Clay, Stone, Metal",
-    "sculpting_intro": "Escaping 2D. Touching matter for real.",
-    "photo_consolidated_title": "Photo Portfolio",
-    "photo_consolidated_subtitle": "Eye on the city",
-    "nav_music": "Sound",
-    "music_title": "🎵 Sound",
-    "music_subtitle": "My compositions & vibes",
-    "music_tracks_heading": "🎧 Tracks",
+    "sidebar_radio_select": "Select Station:",
+    "sidebar_video_title": "Video",
+    "sidebar_video_note": "Click to play",
+    "sculpting_title": "Sculpting",
+    "sculpting_subtitle": "Subtitle",
+    "sculpting_intro": "Intro text.",
+    "photo_consolidated_title": "Photography",
+    "photo_consolidated_subtitle": "Subtitle",
+    "nav_music": "Music",
+    "music_title": "Music",
+    "music_subtitle": "Subtitle",
+    "music_tracks_heading": "Tracks",
     "music_loading": "Loading...",
-    "music_marquee": ">>> ON AIR <<< SOUND CREATION <<< LISTEN TO THIS 2026 <<<",
-    "music_no_tracks": "Nothing yet. Studio is empty.",
-    "music_load_error": "Load error.",
-    "music_audio_unsupported": "Your browser refuses to play sound.",
+    "music_marquee": ">>> MUSIC MARQUEE <<<",
+    "music_no_tracks": "No tracks yet.",
+    "music_load_error": "Error loading music.",
+    "music_audio_unsupported": "Audio not supported.",
     "music_play_in_radio": "Play in Radio",
-    "index_latest_loading": "Checking what's new...",
-    "index_latest_label": "⭐ FRESH ⭐",
+    "index_latest_loading": "Loading...",
+    "index_latest_label": "NEW",
     "index_latest_added": "Date:",
     "index_latest_empty": "Nothing new.",
     "sidebar_radio_loading": "Loading...",
-    "sidebar_radio_no_tracks": "Radio silence.",
-    "detail_loading": "One moment...",
-    "detail_not_found": "Doesn't exist.",
-    "detail_medium": "Technique:",
-    "detail_genre": "Style:",
-    "detail_description": "The Story",
+    "sidebar_radio_no_tracks": "No tracks.",
+    "detail_loading": "Loading...",
+    "detail_not_found": "Not found.",
+    "detail_medium": "Medium:",
+    "detail_genre": "Genre:",
+    "detail_description": "Description",
     "detail_listen": "Listen",
     "detail_back": "Back",
     "detail_private": "Private",
     "detail_public": "Public",
-    "detail_error": "Oops, load error.",
+    "detail_error": "Error loading details.",
     "detail_lyrics": "Lyrics",
     "card_github": "GitHub",
     "card_website": "Website",
-    "music_play_me": "Play Me",
-    "admin_title": "PORTFOLIO MANAGER V1.0",
+    "music_play_me": "Play",
+    "admin_title": "PORTFOLIO MANAGER",
     "admin_tab_add": "Add Media",
     "admin_tab_manage": "Manage Content",
     "admin_tab_bulk": "Bulk Edit",
     "admin_tab_translations": "Translations",
     "admin_tab_config": "Configuration",
     "admin_drop_title": "DROP FILES HERE",
-    "admin_drop_subtitle": "or click to browse — images + audio supported",
+    "admin_drop_subtitle": "or click to upload",
     "admin_upload_button": "Upload",
     "admin_loading": "Loading...",
-    "admin_fetching": "Fetching from GitHub...",
-    "admin_kernel_ready": "[OS-KERNEL] Ready...",
+    "admin_fetching": "Fetching...",
+    "admin_kernel_ready": "Ready...",
     "admin_logged_as": "Logged in as",
     "admin_user": "ADMIN",
-    "admin_system": "System: AI-Enhanced",
-    "edit_title": "CONTROL-PANEL V1.0"
+    "admin_system": "System Ready",
+    "edit_title": "CONTROL PANEL"
 }
