--- a/lang.example/fr.json.example
+++ b/lang.example/fr.json.example
@@ -7,108 +7,108 @@
     "nav_sculpting": "Volume",
     "nav_projects": "Code",
     "header_title": "Votre Portfolio",
-    "header_subtitle": "Code le jour, Art la nuit. Essayer de faire du sens avec tout ça.",
-    "marquee": "*** Bienvenue sur mon portfolio rétro - Un voyage nostalgique à travers la créativité et le code. ***",
-    "sidebar_about_title": "C'est qui ?",
-    "sidebar_about_text": "Votre bio ici. Artiste, développeur, créateur. Racontez votre histoire.",
-    "sidebar_links_title": "Mes réseaux",
-    "sidebar_github": "Mon GitHub",
-    "sidebar_linkedin": "Mon LinkedIn",
+    "header_subtitle": "Votre sous-titre ici.",
+    "marquee": "*** Bienvenue sur mon portfolio - Personnalisez ce texte dans lang/fr.json ***",
+    "sidebar_about_title": "À propos",
+    "sidebar_about_text": "Écrivez une courte bio ici.",
+    "sidebar_links_title": "Réseaux",
+    "sidebar_github": "GitHub",
+    "sidebar_linkedin": "LinkedIn",
     "sidebar_status_title": "Statut",
-    "sidebar_status_available": "Ouvert aux projets intéressants.",
-    "sidebar_construction": "Toujours en chantier (comme le reste).",
-    "sidebar_radio_title": "Votre Radio",
-    "sidebar_radio_playing": "En ce moment :",
+    "sidebar_status_available": "Disponible",
+    "sidebar_construction": "En construction",
+    "sidebar_radio_title": "Radio",
+    "sidebar_radio_playing": "En lecture :",
     "footer_copy": "© 2026 Votre Nom",
-    "footer_browser": "Garanti sans frameworks lourds. Marche mieux avec un café.",
-    "footer_visitors": "Passages :",
-    "footer_last_updated": "Dernière update :",
+    "footer_browser": "Meilleur affichage sur...",
+    "footer_visitors": "Visites :",
+    "footer_last_updated": "Dernière MAJ :",
     "gallery_created_on": "Créé le :",
     "gallery_added_on": "Ajouté le :",
-    "filter_empty": "Rien ici pour l'instant.",
-    "index_welcome": "Salut.",
-    "index_intro": "J'ai passé ma vie à construire des infrastructures invisibles. Ici, c'est l'inverse. C'est visible, c'est imparfait, c'est moi. De l'huile, du fusain, et des photos prises quand la ville dort.",
-    "index_featured": "En ce moment : \"Morning Dreams\" (Huile sur toile)",
-    "index_look_around": "Fais le tour. Y'a pas d'ordre précis, juste des fragments de ce que je vois.",
+    "filter_empty": "Rien pour l'instant.",
+    "index_welcome": "Bonjour.",
+    "index_intro": "Texte d'introduction.",
+    "index_featured": "À la une :",
+    "index_look_around": "Explorez.",
     "index_highlights_title": "Sélection :",
-    "index_highlight_street": "The Street Life - Le chaos urbain, sans filtre.",
-    "index_highlight_pastel": "Série Pastel - Quand j'ai besoin de douceur.",
-    "index_highlight_charcoal": "Portraits au Fusain - Chercher l'âme, pas juste la face.",
-    "gallery_title": "Atelier",
-    "gallery_subtitle": "Huile, Aquarelle et Fusain. Retourner aux sources.",
+    "index_highlight_street": "Highlight 1",
+    "index_highlight_pastel": "Highlight 2",
+    "index_highlight_charcoal": "Highlight 3",
+    "gallery_title": "Galerie",
+    "gallery_subtitle": "Sous-titre",
     "gallery_painting": "Peinture",
     "gallery_drawing": "Dessin",
     "photo_title": "Photographie",
-    "photo_subtitle": "Arrêter le temps une seconde",
-    "photo_nature": "Humains & Béton",
-    "photo_portraits": "Portraits",
-    "street_title": "The Street Life",
-    "street_subtitle": "Montréal, brute et belle",
-    "street_shadows": "Ombres & Lumières",
-    "gallery_painting_drawing": "Peinture & Dessin",
-    "gallery_intro": "L'écran c'est froid. La toile, le papier, ça pardonne pas. C'est ça que j'aime. La frontière entre ce que je vois et ce que je ressens.",
+    "photo_subtitle": "Sous-titre",
+    "photo_nature": "Collection 1",
+    "photo_portraits": "Collection 2",
+    "street_title": "Photo de rue",
+    "street_subtitle": "Sous-titre",
+    "street_shadows": "Collection 1",
+    "gallery_painting_drawing": "Œuvres",
+    "gallery_intro": "Intro galerie.",
     "gallery_back": "Retour",
     "photo_collections": "Séries",
-    "photo_intro": "Je cherche l'énergie de la ville. Les visages fatigués, les ruelles, la lumière de 4h du matin. L'histoire qui s'écrit toute seule.",
-    "street_candid": "L'instant volé",
-    "street_intro": "Montréal est belle quand elle est sale. La photo de rue, c'est ma façon de documenter la solitude et la lumière dans le bordel ambiant.",
-    "street_marquee": ">>> DANS LA RUE <<< L'INVISIBLE DEVIENT VISIBLE <<< MONTRÉAL 2026 <<<",
-    "projects_title": "Code & Systèmes",
-    "projects_subtitle": "L'art de l'architecture invisible",
-    "projects_intro": "L'architecture, c'est aussi de l'art. Quand je lâche les pinceaux, je retourne à mes racines : le terminal, le code, et les systèmes qui tiennent debout.",
-    "projects_view_code": "Voir la source",
-    "sidebar_radio_select": "La trame sonore :",
-    "sidebar_video_title": "TV Rétro",
-    "sidebar_video_note": "Clic pour partir/arrêter",
+    "photo_intro": "Intro photo.",
+    "street_candid": "Candid",
+    "street_intro": "Intro photo de rue.",
+    "street_marquee": ">>> TEXTE DEFILANT <<<",
+    "projects_title": "Projets",
+    "projects_subtitle": "Sous-titre",
+    "projects_intro": "Intro projets.",
+    "projects_view_code": "Voir le code",
+    "sidebar_radio_select": "Choisir station :",
+    "sidebar_video_title": "Vidéo",
+    "sidebar_video_note": "Clic pour lire",
     "sculpting_title": "Volume",
-    "sculpting_subtitle": "Argile, Pierre, Métal",
-    "sculpting_intro": "Sortir de la 2D. Toucher la matière pour vrai.",
-    "photo_consolidated_title": "Portfolio Photo",
-    "photo_consolidated_subtitle": "L'œil sur la ville",
-    "nav_music": "Son",
-    "music_title": "🎵 Son",
-    "music_subtitle": "Mes compos & ambiances",
-    "music_tracks_heading": "🎧 Pistes",
+    "sculpting_subtitle": "Sous-titre",
+    "sculpting_intro": "Intro volume.",
+    "photo_consolidated_title": "Photographie",
+    "photo_consolidated_subtitle": "Sous-titre",
+    "nav_music": "Musique",
+    "music_title": "Musique",
+    "music_subtitle": "Sous-titre",
+    "music_tracks_heading": "Pistes",
     "music_loading": "Chargement...",
-    "music_marquee": ">>> EN ONDES <<< CRÉATION SONORE <<< ÉCOUTE ÇA 2026 <<<",
-    "music_no_tracks": "Rien pour l'instant. Le studio est vide.",
+    "music_marquee": ">>> MARQUEE MUSIQUE <<<",
+    "music_no_tracks": "Aucune piste.",
     "music_load_error": "Erreur de chargement.",
-    "music_audio_unsupported": "Ton browser veut pas jouer de son.",
+    "music_audio_unsupported": "Audio non supporté.",
     "music_play_in_radio": "Jouer dans la radio",
-    "index_latest_loading": "On regarde ce qui est nouveau...",
-    "index_latest_label": "⭐ TOUT FRAIS ⭐",
+    "index_latest_loading": "Chargement...",
+    "index_latest_label": "NOUVEAU",
     "index_latest_added": "Date :",
-    "index_latest_empty": "Rien de neuf.",
+    "index_latest_empty": "Rien de nouveau.",
     "sidebar_radio_loading": "Chargement...",
-    "sidebar_radio_no_tracks": "Silence radio.",
-    "detail_loading": "Un instant...",
-    "detail_not_found": "Ça existe pas.",
+    "sidebar_radio_no_tracks": "Aucune piste.",
+    "detail_loading": "Chargement...",
+    "detail_not_found": "Introuvable.",
     "detail_medium": "Technique :",
     "detail_genre": "Style :",
-    "detail_description": "L'histoire",
+    "detail_description": "Description",
     "detail_listen": "Écouter",
     "detail_back": "Retour",
     "detail_private": "Privé",
     "detail_public": "Public",
-    "detail_error": "Oups, erreur de chargement.",
+    "detail_error": "Erreur.",
     "detail_lyrics": "Paroles",
     "card_github": "GitHub",
-    "card_website": "Site web",
-    "music_play_me": "Écouter",
-    "admin_title": "GESTIONNAIRE DE PORTFOLIO V1.0",
+    "card_website": "Site Web",
+    "music_play_me": "Lire",
+    "admin_title": "GESTIONNAIRE",
     "admin_tab_add": "Ajouter Média",
     "admin_tab_manage": "Gérer Contenu",
     "admin_tab_bulk": "Édition Groupée",
     "admin_tab_translations": "Traductions",
     "admin_tab_config": "Configuration",
     "admin_drop_title": "DÉPOSER FICHIERS ICI",
-    "admin_drop_subtitle": "ou cliquez pour parcourir — images + audio supportés",
+    "admin_drop_subtitle": "ou cliquer pour parcourir",
     "admin_upload_button": "Téléverser",
     "admin_loading": "Chargement...",
-    "admin_fetching": "Récupération depuis GitHub...",
-    "admin_kernel_ready": "[OS-KERNEL] Prêt...",
+    "admin_fetching": "Récupération...",
+    "admin_kernel_ready": "Prêt...",
     "admin_logged_as": "Connecté en tant que",
     "admin_user": "ADMIN",
-    "admin_system": "Système: Amélioré IA",
-    "edit_title": "PANNEAU-CONTRÔLE V1.0"
+    "admin_system": "Système Prêt",
+    "edit_title": "PANNEAU DE CONTRÔLE"
 }
